--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -36,13 +36,15 @@ elseif ("${PORT}" STREQUAL "JSCOnly")
         add_subdirectory(TestWebKitAPI)
     endif ()
 elseif ("${PORT}" STREQUAL "WPE")
-    #add_subdirectory(wpe/examples/embedder)
-    #add_subdirectory(wpe/examples/headless)
     add_subdirectory(wpe/examples/launcher)
-    if (DEVELOPER_MODE)
-        add_subdirectory(ImageDiff)
-        add_subdirectory(WebKitTestRunner)
-    endif ()
+    # if (WPE_MESA_EXPORTABLE_DMA_BUF)
+    #     #add_subdirectory(wpe/examples/embedder)
+    #     #add_subdirectory(wpe/examples/headless)
+    #     if (DEVELOPER_MODE)
+    #         add_subdirectory(ImageDiff)
+    #         add_subdirectory(WebKitTestRunner)
+    #     endif ()
+    # endif ()
 endif ()
 
 if (WIN32)
